--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,23 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+
 a {
   color: #00B7FF;
+}
+
+canvas {
+  width: 800px;
+  height: 600px;
+  position: absolute;
+  top: 0;
+  left: 0,
+  border: solid 2px red;
+  background: black;
+
+}
+
+#background-canvas {
+  display: none;
+  background: pink;
 }
