--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,11 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascripts/jquery-1.8.2.js"></script>
+    <script src="/javascripts/game.js"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <canvas id="background-canvas"></canvas>
+    <canvas id="foreground-canvas"></canvas>
   </body>
 </html>
