--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,9 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="/javascripts/underscore.js"></script>
     <script src="/javascripts/jquery-1.8.2.js"></script>
+    <script src="/javascripts/sylvester.src.js"></script>
     <script src="/javascripts/game.js"></script>
   </head>
   <body>
