--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,15 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/underscore.js"></script>
+    <script src="/javascripts/jquery-1.8.2.js"></script>
+    <script src="/javascripts/keypress.js"></script>
+    <script src="/javascripts/sylvester.src.js"></script>
+
     <script src="/javascripts/core.js"></script>
     <script src="/javascripts/movable.js"></script>
-    <script src="/javascripts/jquery-1.8.2.js"></script>
-    <script src="/javascripts/sylvester.src.js"></script>
+    <script src="/javascripts/cube.js"></script>
     <script src="/javascripts/game.js"></script>
+    <script src="/javascripts/engine.js"></script>
   </head>
   <body>
     <canvas id="background-canvas"></canvas>
