--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
     <script src="/javascripts/core.js"></script>
     <script src="/javascripts/movable.js"></script>
     <script src="/javascripts/world.js"></script>
+    <script src="/javascripts/shot.js"></script>
     <script src="/javascripts/cube.js"></script>
     <script src="/javascripts/game.js"></script>
     <script src="/javascripts/engine.js"></script>
