--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
     <script src="/javascripts/keypress.js"></script>
     <script src="/javascripts/sylvester.src.js"></script>
 
+    <script src="/socket.io/socket.io.js"></script>
+
     <script src="/javascripts/core.js"></script>
     <script src="/javascripts/movable.js"></script>
     <script src="/javascripts/audio.js"></script>
