--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 
     <script src="/socket.io/socket.io.js"></script>
 
+    <script src="/javascripts/object_factory.js"></script>
     <script src="/javascripts/core.js"></script>
     <script src="/javascripts/movable.js"></script>
     <script src="/javascripts/audio.js"></script>
