--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
     <script src="/javascripts/world.js"></script>
     <script src="/javascripts/shot.js"></script>
     <script src="/javascripts/cube.js"></script>
+    <script src="/javascripts/collision.js"></script>
     <script src="/javascripts/game.js"></script>
     <script src="/javascripts/engine.js"></script>
   </head>
