--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script>$url = '<%= url %>';</script>
     <script src="/javascripts/underscore.js"></script>
     <script src="/javascripts/jquery-1.8.2.js"></script>
     <script src="/javascripts/keypress.js"></script>
