delay between shots

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <script src="/javascripts/underscore.js"></script>
     <script src="/javascripts/jquery-1.8.2.js"></script>
     <script src="/javascripts/keypress.js"></script>
+    <script src="/javascripts/keyboard.js"></script>
     <script src="/javascripts/sylvester.src.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
