--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,8 @@
     <script src="/javascripts/collision.js"></script>
     <script src="/javascripts/game.js"></script>
     <script src="/javascripts/engine.js"></script>
+
+    <script> = SC.game.playerCube.characteristics.cube.name = '<%= name %>';</script>
   </head>
   <body>
     <canvas id="background-canvas"></canvas>
