--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
     <script src="/javascripts/game.js"></script>
     <script src="/javascripts/engine.js"></script>
 
-    <script> = SC.game.playerCube.characteristics.cube.name = '<%= name %>';</script>
+    <script>SC.game.playerName = '<%= name %>';</script>
   </head>
   <body>
     <canvas id="background-canvas"></canvas>
