--- a/views/3d.ejs
+++ b/views/3d.ejs
@@ -23,11 +23,13 @@
     <script src="/javascripts/game.js"></script>
     <script src="/javascripts/engine.js"></script>
 	<script src="/javascripts/renderer2d.js"></script>
-	
+
     <script>SC.game.playerName = '<%= name %>';</script>
+	<script>SC.game.webGL = true;</script>
   </head>
   <body>
     <canvas id="background-canvas"></canvas>
     <canvas id="foreground-canvas"></canvas>
+    <canvas id="3d-canvas"></canvas>
   </body>
 </html>
